# cloudkitty

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README  README.rst  cloudkitty.spec  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  rtd-requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: _static
api-ref/source/v1/: v1.rst
api-ref/source/v2/: http_status.yml
cloudkitty/: __init__.py  config.py  dataframe.py  default_metrics_conf.py  extension_manager.py  i18n.py  json_utils.py  messaging.py  orchestrator.py  rpc.py  service.py  state.py  tzutils.py  utils.py  version.py  write_orchestrator.py
cloudkitty/api/: app.py  app.wsgi  config.py  hooks.py  middleware.py  root.py
cloudkitty/api/controllers/: root.py  types.py  v1.py
cloudkitty/api/v1/: __init__.py  config.py  hooks.py  types.py
cloudkitty/api/v2/: __init__.py  base.py  utils.py
cloudkitty/backend/: __init__.py  base.py  file.py
cloudkitty/billing/: __init__.py  base.py  hash.py  noop.py
cloudkitty/billing/hash/: __init__.py
cloudkitty/cli/: api.py  dbsync.py  processor.py  status.py  storage.py  writer.py
cloudkitty/collector/: __init__.py  aetos.py  base.py  ceilometer.py  exceptions.py  fake.py  gnocchi.py  meta.py  monasca.py  prometheus.py  prometheus_base.py
cloudkitty/common/: aetos_client.py  config.py  context.py  custom_session.py  defaults.py  monasca_client.py  policy.py  prometheus_client.py  prometheus_client_base.py  rpc.py
cloudkitty/common/db/: models.py
cloudkitty/common/policies/: __init__.py  base.py  info.py  report.py  storage.py
cloudkitty/db/: __init__.py  api.py
cloudkitty/db/sqlalchemy/: api.py  models.py
cloudkitty/fetcher/: __init__.py  fake.py  gnocchi.py  keystone.py  monasca.py  prometheus.py  source.py
cloudkitty/hacking/: checks.py
cloudkitty/openstack/common/: excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  strutils.py
cloudkitty/rating/: __init__.py  noop.py
cloudkitty/storage/: __init__.py
cloudkitty/storage_state/: __init__.py  models.py
cloudkitty/tenant_fetcher/: __init__.py  fake.py  keystone.py
cloudkitty/tests/: __init__.py  samples.py  test_config.py  test_dataframe.py  test_hacking.py  test_hashmap.py  test_json.py  test_keystone_fetcher.py  test_orchestrator.py  test_policy.py  test_pyscripts.py  test_rating.py  test_state.py  test_storage_state.py  test_transformers.py  test_tzutils.py  test_utils.py  test_validation_utils.py  utils.py
cloudkitty/transformer/: __init__.py  ceilometer.py  format.py  gnocchi.py
cloudkitty/utils/: __init__.py  json.py  tz.py  validation.py
cloudkitty/writer/: __init__.py  base.py  csv_base.py  csv_map.py  osrf.py
cloudkitty/wsgi/: api.py
contrib/: cloudkitty.spec.in
contrib/ci/: csv_writer.py
contrib/devstack/: README.rst
contrib/init/: cloudkitty-api.service
devstack/: README.rst  apache-cloudkitty.template  plugin.sh  settings
devstack/files/: influxdb.conf  loki-config.yaml
devstack/upgrade/: resources.sh  settings  shutdown.sh  upgrade.sh
doc/: Makefile  requirements.txt
doc/source/: api-reference  api.rst  arch.rst  common-index.rst  conf.py  devstack.rst  index.rst  installation.rst  mod_wsgi.rst  pdf-index.rst  sample_policy.rst
etc/: cloudkitty.logrotate
etc/apache2/: cloudkitty
etc/cloudkitty/: api_paste.ini  cloudkitty.conf.sample  metrics.yml  policy.json  prom_metrics.yml
etc/oslo-config-generator/: cloudkitty.conf
etc/oslo-policy-generator/: cloudkitty.conf
init/: cloudkitty-processor.service
playbooks/cloudkitty-install/: run.yaml
playbooks/cloudkitty-tempest-full/: run.yaml
releasenotes/notes/: add-aetos-collector-04879a096e774d1d.yaml  add-dataframe-datapoint-objects-a5a4ac3db5289cb6.yaml  add-dataframes-v2-api-endpoint-601825c344ba0e2d.yaml  add-description-option-to-rating-671430ac73c0315b.yaml  add-gnocchi-fetcher-b8a6e2ea49fcfec5.yaml  add-influx-storage-backend-3ace5b451e789e64.yaml  add-loki-structured-metadata-support-92f3b11c9c57803a.yaml  add-new-validation-to-not-allow-reprocessing-with-incompatible-timewindows-5a44802f20bce4f2.yaml  add-opensearch-as-v2-storage-backend-ff4080d6d32d8a2a.yaml  add-opensearch-elasticsearch-datastreams-support-28b7c1ce700d33c0.yaml  add-prometheus-fetcher-be6082f70f279f0e.yaml  add-re-aggregation-method-option-gnocchi-collector-249917a14c4fc721.yaml  add-scope-key-58135c2a5c6dae68.yaml  add-start-end-for-rating-rules-deb70656ba687b75.yaml  add-storage-state-v2-api-endpoint-45a29d0b44e177b8.yaml  add-storage-state-v2-api-endpoint-492d7092e85ed7b1.yaml  add-support-to-influxdb-v2-storage-backend-f94df79f9e5276a8.yaml  add-tempest-plugin-3584e1918f344fb2.yaml  add-v2-storage-driver-for-elasticsearch-ec41cbb7849e82d3.yaml  add_warning_regarding_gnocchi_version-99d5213c35950e39.yaml  added-forced-granularity-gnocchi-d52e988194197248.yaml  added-v2-api-1ef829355c2feea4.yaml  admin-or-owner-policy-c666346da4405d13.yaml  allow-multiple-ranting-types-for-same-metric-in-gnocchi-1011ba2d5d36c073.yaml  batch-delete-reprocessing-d46df15b078a42a5.yaml  change-metrology-organization-1e11900eb30780cc.yaml  check-duplicates-metadata-groupby-d5ee99941bb483fd.yaml  collector-monasca-f0871406513ff22c.yaml  create-use_all_entries_for_timespan-option-for-gnocchi-collector-39d29603b1f554e1.yaml  custom-gnocchi-query-a391f5e83d55d771.yaml  dataframes-get-v2-policy-check-6070fc047b2e1496.yaml  default-to-v2-storage-a5ecac7e73dafa6d.yaml  deprecate-ceilometer-collector-6d8f72c84b95662b.yaml  deprecate-collector-mappings-5a69b31c8037fc01.yaml  deprecate-elasticsearch-for-opensearch-a338965edff23509.yaml  deprecate-get-state-2932a4e6a74295ce.yaml  deprecate-info-services-endpoints-0c5018cb08a30d5f.yaml  deprecate-monasca-5526b823b227c6ef.yaml  deprecate-report-total-62544dce42bb19a6.yaml  deprecate-set-state-3eea30afd43647ab.yaml  (+93 more)
releasenotes/source/: conf.py  index.rst
tests/: test_fake.py
tools/config/: check_uptodate.sh  generate_sample.sh  oslo.config.generator.rc
(+343 files in other folders)
