[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "cloudkitty"
description = "Rating as a Service component for OpenStack"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://docs.openstack.org/cloudkitty"
Repository = "https://opendev.org/openstack/cloudkitty/"

[project.scripts]
cloudkitty-dbsync = "cloudkitty.cli.dbsync:main"
cloudkitty-processor = "cloudkitty.cli.processor:main"
cloudkitty-storage-init = "cloudkitty.cli.storage:main"
cloudkitty-status = "cloudkitty.cli.status:main"

[project.entry-points."oslo.policy.enforcer"]
cloudkitty = "cloudkitty.common.policy:get_enforcer"

[project.entry-points."oslo.policy.policies"]
cloudkitty = "cloudkitty.common.policies:list_rules"

[project.entry-points."oslo.config.opts"]
"cloudkitty.common.config" = "cloudkitty.common.config:list_opts"

[project.entry-points."oslo.config.opts.defaults"]
"cloudkitty.common.config" = "cloudkitty.common.defaults:set_config_defaults"

[project.entry-points."cloudkitty.collector.backends"]
gnocchi = "cloudkitty.collector.gnocchi:GnocchiCollector"
prometheus = "cloudkitty.collector.prometheus:PrometheusCollector"
aetos = "cloudkitty.collector.aetos:AetosCollector"

[project.entry-points."cloudkitty.fetchers"]
keystone = "cloudkitty.fetcher.keystone:KeystoneFetcher"
source = "cloudkitty.fetcher.source:SourceFetcher"
gnocchi = "cloudkitty.fetcher.gnocchi:GnocchiFetcher"
prometheus = "cloudkitty.fetcher.prometheus:PrometheusFetcher"

[project.entry-points."cloudkitty.rating.processors"]
noop = "cloudkitty.rating.noop:Noop"
hashmap = "cloudkitty.rating.hash:HashMap"
pyscripts = "cloudkitty.rating.pyscripts:PyScripts"

[project.entry-points."cloudkitty.storage.v1.backends"]
sqlalchemy = "cloudkitty.storage.v1.sqlalchemy:SQLAlchemyStorage"
hybrid = "cloudkitty.storage.v1.hybrid:HybridStorage"

[project.entry-points."cloudkitty.storage.v2.backends"]
influxdb = "cloudkitty.storage.v2.influx:InfluxStorage"
elasticsearch = "cloudkitty.storage.v2.elasticsearch:ElasticsearchStorage"
opensearch = "cloudkitty.storage.v2.opensearch:OpenSearchStorage"
loki = "cloudkitty.storage.v2.loki:LokiStorage"

[project.entry-points."cloudkitty.storage.hybrid.backends"]
gnocchi = "cloudkitty.storage.v1.hybrid.backends.gnocchi:GnocchiStorage"

[tool.setuptools]
packages = [
    "cloudkitty",
]
