[metadata]
name = cloudkitty
summary = Rating as a Service component for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/cloudkitty/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    cloudkitty

[entry_points]
console_scripts =
    cloudkitty-dbsync = cloudkitty.cli.dbsync:main
    cloudkitty-processor = cloudkitty.cli.processor:main
    cloudkitty-storage-init = cloudkitty.cli.storage:main
    cloudkitty-writer = cloudkitty.cli.writer:main

wsgi_scripts =
    cloudkitty-api = cloudkitty.api.app:build_wsgi_app

oslo.policy.enforcer =
    cloudkitty = cloudkitty.common.policy:get_enforcer

oslo.policy.policies =
    cloudkitty = cloudkitty.common.policies:list_rules

oslo.config.opts =
    cloudkitty.common.config = cloudkitty.common.config:list_opts

oslo.config.opts.defaults =
    cloudkitty.common.config = cloudkitty.common.defaults:set_cors_middleware_defaults

cloudkitty.collector.backends =
    fake = cloudkitty.collector.fake:CSVCollector
    gnocchi = cloudkitty.collector.gnocchi:GnocchiCollector
    monasca = cloudkitty.collector.monasca:MonascaCollector
    meta = cloudkitty.collector.meta:MetaCollector

cloudkitty.tenant.fetchers =
    fake = cloudkitty.fetcher.fake:FakeFetcher
    keystone = cloudkitty.fetcher.keystone:KeystoneFetcher
    source = cloudkitty.fetcher.source:SourceFetcher

cloudkitty.transformers =
    CloudKittyFormatTransformer = cloudkitty.transformer.format:CloudKittyFormatTransformer
    GnocchiTransformer = cloudkitty.transformer.gnocchi:GnocchiTransformer

cloudkitty.rating.processors =
    noop = cloudkitty.rating.noop:Noop
    hashmap = cloudkitty.rating.hash:HashMap
    pyscripts = cloudkitty.rating.pyscripts:PyScripts

cloudkitty.storage.backends =
    sqlalchemy = cloudkitty.storage.sqlalchemy:SQLAlchemyStorage
    hybrid = cloudkitty.storage.hybrid:HybridStorage

cloudkitty.storage.hybrid.backends =
    gnocchi = cloudkitty.storage.hybrid.backends.gnocchi:GnocchiStorage

cloudkitty.output.writers =
    osrf = cloudkitty.writer.osrf:OSRFBackend
    csv = cloudkitty.writer.csv_map:CSVMapped

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook
