[metadata]
name = cloudkitty
summary = Rating as a Service component for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/cloudkitty/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    cloudkitty

[entry_points]
console_scripts =
    cloudkitty-dbsync = cloudkitty.cli.dbsync:main
    cloudkitty-processor = cloudkitty.cli.processor:main
    cloudkitty-storage-init = cloudkitty.cli.storage:main
    cloudkitty-writer = cloudkitty.cli.writer:main
    cloudkitty-status = cloudkitty.cli.status:main

wsgi_scripts =
    cloudkitty-api = cloudkitty.api.app:build_wsgi_app

oslo.policy.enforcer =
    cloudkitty = cloudkitty.common.policy:get_enforcer

oslo.policy.policies =
    cloudkitty = cloudkitty.common.policies:list_rules

oslo.config.opts =
    cloudkitty.common.config = cloudkitty.common.config:list_opts

oslo.config.opts.defaults =
    cloudkitty.common.config = cloudkitty.common.defaults:set_cors_middleware_defaults

cloudkitty.collector.backends =
    gnocchi = cloudkitty.collector.gnocchi:GnocchiCollector
    monasca = cloudkitty.collector.monasca:MonascaCollector
    prometheus = cloudkitty.collector.prometheus:PrometheusCollector

cloudkitty.fetchers =
    keystone = cloudkitty.fetcher.keystone:KeystoneFetcher
    source = cloudkitty.fetcher.source:SourceFetcher
    gnocchi = cloudkitty.fetcher.gnocchi:GnocchiFetcher
    prometheus = cloudkitty.fetcher.prometheus:PrometheusFetcher

cloudkitty.transformers =
    CloudKittyFormatTransformer = cloudkitty.transformer.format:CloudKittyFormatTransformer

cloudkitty.rating.processors =
    noop = cloudkitty.rating.noop:Noop
    hashmap = cloudkitty.rating.hash:HashMap
    pyscripts = cloudkitty.rating.pyscripts:PyScripts

cloudkitty.storage.v1.backends =
    sqlalchemy = cloudkitty.storage.v1.sqlalchemy:SQLAlchemyStorage
    hybrid = cloudkitty.storage.v1.hybrid:HybridStorage

cloudkitty.storage.v2.backends =
    influxdb = cloudkitty.storage.v2.influx:InfluxStorage

cloudkitty.storage.hybrid.backends =
    gnocchi = cloudkitty.storage.v1.hybrid.backends.gnocchi:GnocchiStorage

cloudkitty.output.writers =
    osrf = cloudkitty.writer.osrf:OSRFBackend
    csv = cloudkitty.writer.csv_map:CSVMapped

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook
